// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: <VisiblePlayersList /> With 2 Players and name filter renders the component 1`] = `
<tbody>
  <Player
    key="test name 1"
    player={
      Object {
        "dateOfBirth": "2000-01-01",
        "name": "test name 1",
        "nationality": "test nationality 1",
        "position": "Central Midfield",
      }
    }
  />
</tbody>
`;

exports[`Component: <VisiblePlayersList /> With 2 Players and unexistent name filter renders the component 1`] = `
<tbody>
  <tr
    id="noPlayersMatchFilters"
  >
    <td
      className="border-2 border-black px-1 py-3 sm:py-6"
      colSpan="4"
    >
      No players match those filters
    </td>
  </tr>
</tbody>
`;

exports[`Component: <VisiblePlayersList /> With 2 Players renders the component 1`] = `
<tbody>
  <Player
    key="test name 1"
    player={
      Object {
        "dateOfBirth": "2000-01-01",
        "name": "test name 1",
        "nationality": "test nationality 1",
        "position": "Central Midfield",
      }
    }
  />
  <Player
    key="test name 2"
    player={
      Object {
        "dateOfBirth": "2000-01-01",
        "name": "test name 2",
        "nationality": "test nationality 2",
        "position": "Centre-Back",
      }
    }
  />
</tbody>
`;

exports[`Component: <VisiblePlayersList /> Without Players renders the component 1`] = `
<tbody>
  <tr
    id="noPlayersMatchFilters"
  >
    <td
      className="border-2 border-black px-1 py-3 sm:py-6"
      colSpan="4"
    >
      No players match those filters
    </td>
  </tr>
</tbody>
`;
